--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
@@ -28,6 +28,10 @@
 	top: 5px;
 	bottom: 0px;
 }
+.rtl .teamschedule-timeline {
+	left: auto;
+	right: 0px;
+}
 .teamschedule-timeline-spacer {
 	width: 125px;
 }
@@ -40,6 +44,10 @@
 	font-size: 8px;
 	border-left: 1px solid rgba(0, 0, 0, 0.15);
 }
+.rtl .teamschedule-timeline-time {
+	border-left: none;
+	border-right: 1px solid rgba(0, 0, 0, 0.15);
+}
 .teamschedule-timeline-label 
 {
 	padding: 1px;
@@ -50,7 +58,10 @@
 	left: -10px;
 	position: relative;
 }
-
+.rtl .teamschedule-timeline-label {
+	left: auto;
+	right: -10px;
+}
 .teamschedule-timeline-time.minute .teamschedule-timeline-label
 {
 	display: none;
@@ -96,6 +107,11 @@
 	position: absolute;
 	left: 125px;
 }
+.rtl .teamschedule-agent-schedule
+{
+	left: auto;
+	right: 125px;
+}
 
 .teamschedule .layer 
 {
@@ -117,6 +133,11 @@
 	text-align: center;
 	height: 18px;
 	border-radius: 2px;
+}
+.rtl .teamschedule .dayoff
+{
+	margin-left: auto;
+	margin-right: 5px;
 }
 
 #TeamScheduleDateRangeSelector.date-range-selector .datepicker{
