Added step definition "I have a preference with end time limitation between (.*) and (.*)"

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -56,6 +56,9 @@
 								{
 									<div class="preference">
 										@preference.Preference
+										<div class="possible-start-times">@preference.PossibleStartTimes</div>
+										<div class="possible-end-times">@preference.PossibleEndTimes</div>
+										<div class="possible-contract-times">@preference.PossibleContractTimes</div>
 									</div>
 								}
 								@if (personAssignment != null)
