--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/MainWindow.xaml
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/MainWindow.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Control="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.EtlJobSchedule.Control"
-    Title="Teleopti Analytics ETL Tool" Height="700" Width="800" WindowState="Maximized"  
+        xmlns:View="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.EtlJobSchedule.View"
+        Title="Teleopti Analytics ETL Tool" Height="700" Width="800" WindowState="Maximized"  
     ContentRendered="Window_ContentRendered">
 
     <Grid>
@@ -24,6 +25,10 @@
                 <Control:ScheduleControl x:Name="scheduleControl">
                 </Control:ScheduleControl>
             </TabItem>
-        </TabControl>
+			<TabItem Header="ETL Job History" IsEnabled="{Binding Path=CanRun}">
+				<View:JobHistoryMain x:Name="jobHistory">
+				</View:JobHistoryMain>
+			</TabItem>
+		</TabControl>
     </Grid>
 </Window>
