Scenario FeedbackFromAnAddedPreference done!

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Teleopti.Ccc.UserTexts
 @using Teleopti.Ccc.Web.Areas.MyTime.Core
-@using Teleopti.Ccc.Web.Areas.MyTime.Core.Preference
+@using Teleopti.Ccc.Web.Areas.MyTime.Models.Shared
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.Preference
 @model PreferenceViewModel
 @{
@@ -9,30 +9,34 @@
 
 <div id="Preference-period" class="pd5 info-pnl">
 	@if (Model.PreferencePeriod == null)
-	 {
-			@string.Format("{0} : {1}", Resources.PreferencePeriod, Resources.MissingWorkflowControlSet)
-	 }
-	 else
-	 {
-			@string.Format("{0} : {1} | ", Resources.PreferencePeriod, Model.PreferencePeriod.Period)
-			@string.Format("{0} : {1}", Resources.IsOpen, Model.PreferencePeriod.OpenPeriod)
-	 }
- </div>
+	{
+		@string.Format("{0} : {1}", Resources.PreferencePeriod, Resources.MissingWorkflowControlSet)
+	}
+	else
+	{
+		@string.Format("{0} : {1} | ", Resources.PreferencePeriod, Model.PreferencePeriod.Period)
+		@string.Format("{0} : {1}", Resources.IsOpen, Model.PreferencePeriod.OpenPeriod)
+	}
+</div>
 <div id="Preference-body" class="body-calendarview clearfix" data-mytime-periodselection='@Html.Schedule().PeriodSelectionAsJson(Model.PeriodSelection)'>
 	<style>
-		@foreach (var style in Model.Styles)
+		@foreach (StyleClassViewModel style in Model.Styles)
 		{
 			@string.Format(".calendarview-week li.{0} div {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
 		}
+
+
+
+		
 	</style>
 	<div id="Preference-body-inner" class="body-calendarview-inner clearfix">
 		<ul class="weekdays">
-			@foreach (var weekDayName in Model.WeekDayHeaders)
+			@foreach (WeekDayHeader weekDayName in Model.WeekDayHeaders)
 			{
 				<li>@weekDayName.Title</li>
 			}
 		</ul>
-		@foreach (var week in Model.Weeks)
+		@foreach (WeekViewModel week in Model.Weeks)
 		{
 			<ul class="calendarview-week">
 				<li>
@@ -40,32 +44,27 @@
 
 					</div>
 				</li>
-				@foreach (var day in week.Days)
+				@foreach (DayViewModel day in week.Days)
 				{
-					var preference = day.Preference;
-					var personAssignment = day.PersonAssignment;
-					var dayOff = day.DayOff;
-					var absence = day.Absence;
+					PreferenceDayViewModel preference = day.Preference;
+					PersonAssignmentDayViewModel personAssignment = day.PersonAssignment;
+					DayOffDayViewModel dayOff = day.DayOff;
+					AbsenceDayViewModel absence = day.Absence;
 					<li class="@(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
 						<div>
 							<div class="day-header">
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
 							</div>
 							<div class="day-content pdt10">
-								@if (preference != null)
+								@if (preference != null && day.Editable)
 								{
 									<div class="preference">
 										@preference.Preference
-										@if (day.Editable && preference.ValidationError != "")
-										{
-											<div class="error">@preference.ValidationError</div>
-										}
-										else {
-											<div class="possible-start-times">@preference.PossibleStartTimes</div>
-											<div class="possible-end-times">@preference.PossibleEndTimes</div>
-											<div class="possible-contract-times">@preference.PossibleContractTimes</div>
-										}
 									</div>
+									<div class="error">@preference.FeedbackError</div>
+									<div class="possible-start-times">@preference.PossibleStartTimes</div>
+									<div class="possible-end-times">@preference.PossibleEndTimes</div>
+									<div class="possible-contract-times">@preference.PossibleContractTimes</div>
 								}
 								@if (personAssignment != null)
 								{
