--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -50,7 +50,7 @@
 					PersonAssignmentDayViewModel personAssignment = day.PersonAssignment;
 					DayOffDayViewModel dayOff = day.DayOff;
 					AbsenceDayViewModel absence = day.Absence;
-					<li class="@(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
+					<li class="relative @(day.Feedback ? "feedback" : "") @(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
 						<div>
 							<div class="day-header">
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
@@ -61,10 +61,10 @@
 									<div class="preference">
 										@preference.Preference
 									</div>
-									<div class="error">@preference.FeedbackError</div>
-									<div class="possible-start-times">@preference.PossibleStartTimes</div>
-									<div class="possible-end-times">@preference.PossibleEndTimes</div>
-									<div class="possible-contract-times">@preference.PossibleContractTimes</div>
+									<div class="feedback-error"></div>
+									<div class="possible-start-times"></div>
+									<div class="possible-end-times"></div>
+									<div class="possible-contract-times"></div>
 								}
 								@if (personAssignment != null)
 								{
