--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -28,7 +28,7 @@
 		</ul>
 		@foreach (var week in Model.Weeks)
 		{
-			<ul class="calendarview-week">
+			<ul class="calendarview-week" onselectstart="return false;">
 				<li>
 					<div>
 
