--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
@@ -26,6 +26,7 @@
 	</div>
 </article>
 	<div id="loading">
-		<img src="@Url.Content("~/Areas/MyTime/Content/Images/ajax-loader.gif")" alt="Loading..." />	
+		<img src="@Url.Content("~/Areas/MyTime/Content/Images/ajax-loader.gif")" alt="Loading..." />
 	</div>
+	<img id="loading-small-gray-blue" src="@Url.Content("~/Areas/MyTime/Content/Images/ajax-loader-small-f8f8f8-A1C7D3.gif")" alt="..." class="template" />
 </section>
