--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -39,6 +39,9 @@
 	<script src="@Url.Content("~/Content/Scripts/date.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.hoverIntent.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.qtip.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/jquery.signalR.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/jquery.signalR.min.js")"></script>
+	<script src="@Url.Content("~/signalr/hubs")"></script>
 
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.extensions.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.labeledinput.js")"></script>
