Fixed an issue with a session scenario involing preferences

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Shared/_LayoutBase.cshtml
@@ -39,9 +39,7 @@
 	<script src="@Url.Content("~/Content/Scripts/date.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.hoverIntent.js")"></script>
 	<script src="@Url.Content("~/Content/Scripts/jquery.qtip.js")"></script>
-	<script src="@Url.Content("~/Content/Scripts/jquery.signalR.js")"></script>
-	<script src="@Url.Content("~/Content/Scripts/jquery.signalR.min.js")"></script>
-	<script src="@Url.Content("~/signalr/hubs")"></script>
+	<script src="@Url.Content("~/Content/Scripts/indexOf.js")"></script>
 
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.extensions.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/jquery.ui.labeledinput.js")"></script>
@@ -64,6 +62,7 @@
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Request.TextRequest.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.TeamSchedule.js")"></script>
 	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Settings.js")"></script>
+	<script src="@Url.Content("~/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Test.js")"></script>
 
 	@RenderSection("head", required: false)
 </head>
