--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Teleopti.Ccc.Web.Areas.MyTime.Core
+﻿@using Teleopti.Ccc.UserTexts
+@using Teleopti.Ccc.Web.Areas.MyTime.Core
 @using Teleopti.Ccc.Web.Areas.MyTime.Models.Portal
 @model PortalViewModel
 
@@ -23,6 +24,10 @@
     <div id="body-inner" class="pdl5 pdt5 pdr5">
 	</div>
 	<div id="body-bottom" class="pdb5">
+	<div class="pdt5 pdl10 extraextrasmall">
+		<span id="licensed-to-label">@Resources.LicensedToColon</span>
+		<span id="licensed-to-text">@Model.CustomerName</span>
+	</div>
 	</div>
 </article>
 	<div id="loading">
