Why did we ever add to only show preference if editable?

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -50,7 +50,7 @@
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
 							</div>
 							<div class="day-content pdt10" style="border-left-color: @day.BorderColor">
-								@if (preference != null && day.Editable)
+								@if (preference != null)
 								{
 									<div class="preference">
 										@preference.Preference
