--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -33,7 +33,7 @@
 						@day.Summary.Summary
 					</div>
 				</li>
-				<li>
+				<li class="add-text-request">
 					<div class="relative">
 						<div class="text-request absolute" @(day.TextRequestCount > 0 ? "" : "style=display:none") title="@(string.Format(Resources.XRequests, day.TextRequestCount))">
 							<div class="floatright extrasmall">@day.TextRequestCount</div>
@@ -69,60 +69,42 @@
 	</div>
 </div>
 
-<div id="Schedule-addTextRequest-section" class="edit-section col-1 floatleft mt10 displaynone">
-	<div class="edit-section-content col-1 clearfix">
-		<div class="edit-module floatleft">
-			<div class="edit-module-inner">
-				<div class="edit-module-element">
-					<label class="displayblock" for="Schedule-addTextRequest-subject-input">@Resources.Subject</label>
-					<input id="Schedule-addTextRequest-subject-input" type="text"/>
-				</div>
-				<div class="edit-module-element">
-					<label class="displayblock" for="Schedule-addTextRequest-message-input">@Resources.Message</label>
-					<textarea id="Schedule-addTextRequest-message-input" />
-				</div>
-			</div>
-		</div>
-		<div class="edit-module floatleft">
-			<div class="edit-module-inner">
-				<div>
-					<div class="edit-module-element floatleft">
-						<label class="displayblock" for="Schedule-addTextRequest-fromDate-input">@Resources.From</label>
-						<input id="Schedule-addTextRequest-fromDate-input" class="date-input" type="text" value="@Model.Days.First().Date" />
-					</div>
-					<div class="edit-module-element floatleft">
-						<label class="displayblock" for="Schedule-addTextRequest-fromTime-input-input">@Resources.Time</label>
-						<select id="Schedule-addTextRequest-fromTime-input" class="time-input combobox">
-							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
-	   {
-								<option @(timeSpan.Hours == 8 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-	   }
-						</select>
-					</div>
-					<div class="edit-module-element clearleftfloat floatleft">
-						<label class="displayblock" for="Schedule-addTextRequest-toDate-input">@Resources.To</label>
-						<input id="Schedule-addTextRequest-toDate-input" class="date-input" type="text" value="@Model.Days.First().Date" />
-					</div>
-					<div class="edit-module-element floatleft">
-						<label class="displayblock" for="Schedule-addTextRequest-toTime-input-input">@Resources.Time</label>
-						<select id="Schedule-addTextRequest-toTime-input" class="time-input combobox">
-							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
-	   {
-								<option @(timeSpan.Hours == 17 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-	   }
-						</select>
-					</div>
-					<div class="clearboth"></div>
-				</div>
-			</div>
-		</div>
-		<div class="edit-button-bar mr5 ml5 clearleftfloat">
-			<div id="Schedule-addTextRequest-error" class="error floatleft">
-			</div>
-			<div class="floatright">
-				<input id="Schedule-addTextRequest-ok-button" type="button" class="button mb5" value="@Html.AttributeEncode(Resources.Save)"/>
-				<input id="Schedule-addTextRequest-cancel-button" type="button" class="button cancel mb5" value="@Html.AttributeEncode(Resources.Cancel)" />
-			</div>
-		</div>
+
+<div id="Schedule-addTextRequest-section" class="displaynone ui-corner-all">
+	<strong>@Resources.NewTextRequest</strong>
+	<div class="edit-module-element">
+		<label class="displayblock" for="Request-detail-subject-input">@Resources.Subject</label>
+		<input id="Request-detail-subject-input" type="text"/>
 	</div>
+	<div class="edit-module-element">
+		<label class="displayblock" for="Request-detail-message-input">@Resources.Message</label>
+		<textarea id="Request-detail-message-input" />
+	</div>
+	<div class="edit-module-element floatleft">
+		<input id="Request-detail-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
+	</div>
+	<div class="edit-module-element floatleft">
+		<label class="displayblock" for="Request-detail-fromTime-input-input">@Resources.Time</label>
+		<select id="Request-detail-fromTime-input" class="time-input combobox">
+			@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x*30, 0)))
+			{
+				<option @(timeSpan.Hours == 8 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
+			}
+		</select>
+	</div>
+	<div class="edit-module-element clearleftfloat floatleft">
+		<input id="Request-detail-toDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()"  />
+	</div>
+	<div class="edit-module-element floatleft">
+		<label class="displayblock" for="Request-detail-toTime-input-input">@Resources.Time</label>
+		<select id="Request-detail-toTime-input" class="time-input combobox">
+			@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x*30, 0)))
+			{
+				<option @(timeSpan.Hours == 17 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
+			}
+		</select>
+	</div>
+	<input id="Request-detail-ok-button" type="button" class="button mb5 floatright" update-value="@Html.AttributeEncode(Resources.Update)" new-value="@Html.AttributeEncode(Resources.NewRequest)"/>
+	<div id="Request-detail-error" class="error clearleftfloat"></div>
 </div>
+
