--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -70,7 +70,12 @@
 </div>
 
 
-<div id="Schedule-addRequest-title" class="displaynone">@Resources.NewTextRequest</div>
+@*<div id="Schedule-addRequest-title" class="displaynone">@Resources.NewTextRequest</div>*@
+<div id="Schedule-addRequest-title"class="displaynone">
+	<span id="Text-request-tab" class="">@Resources.NewTextRequest</span>
+	|
+	<span id="Absence-request-tab" class="">Absence Request</span>
+</div>
 
 <div class="displaynone" id="Schedule-addRequest-cancel-button">@Resources.Cancel</div>
 
@@ -82,6 +87,15 @@
 	<div class="edit-module-element">
 		<label class="displayblock" for="Schedule-addRequest-message-input">@Resources.Message</label>
 		<textarea id="Schedule-addRequest-message-input" />
+	</div>
+	<div id="Absence-type-element" class="edit-module-element floatleft displaynone">
+		<div class="floatleft absence-input">Absence Type:</div>
+		<select id="Absence-type" class="edit-module-element floatleft absence-input combobox">
+			@foreach (var absenceType in Model.AbsenceTypes)
+			{
+				<option value="@Html.AttributeEncode(absenceType)">@absenceType.Name</option>
+			}
+		</select>
 	</div>
 	<div class="edit-module-element floatleft">
 		<input id="Schedule-addRequest-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
