--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -72,9 +72,9 @@
 
 @*<div id="Schedule-addRequest-title" class="displaynone">@Resources.NewTextRequest</div>*@
 <div id="Schedule-addRequest-title"class="displaynone">
-	<span id="Text-request-tab" class="">@Resources.NewTextRequest</span>
+	<span id="Text-request-tab" class="selectable-tab selected-tab">@Resources.NewTextRequest</span>
 	|
-	<span id="Absence-request-tab" class="">Absence Request</span>
+	<span id="Absence-request-tab" class="selectable-tab">Absence Request</span>
 </div>
 
 <div class="displaynone" id="Schedule-addRequest-cancel-button">@Resources.Cancel</div>
