--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/MainWindow.xaml
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/MainWindow.xaml
@@ -1,9 +1,8 @@
 <Window x:Class="Teleopti.Analytics.Etl.ConfigTool.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Control="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.EtlJobSchedule.Control"
-        xmlns:View="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.EtlJobSchedule.View"
-        Title="Teleopti Analytics ETL Tool" Height="700" Width="800" WindowState="Maximized"  
+        xmlns:Control="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.Gui.Control"
+        xmlns:View="clr-namespace:Teleopti.Analytics.Etl.ConfigTool.Gui.View" Title="Teleopti Analytics ETL Tool" Height="700" Width="800" WindowState="Maximized"  
     ContentRendered="Window_ContentRendered">
 
     <Grid>
