default value for new absence request

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -78,6 +78,8 @@
 </div>
 
 <div class="displaynone" id="Schedule-addRequest-cancel-button">@Resources.Cancel</div>
+<div class="displaynone" id="Schedule-addRequest-default-start-time">@TimeHelper.TimeOfDayFromTimeSpan(new TimeSpan(0, 0, 0))</div>
+<div class="displaynone" id="Schedule-addRequest-default-end-time">@TimeHelper.TimeOfDayFromTimeSpan(new TimeSpan(23, 59, 0))</div>
 
 <div id="Schedule-addRequest-section" class="displaynone ui-corner-all">
 	<div class="edit-module-element">
