Fix of bug #19334
--HG--
branch : Release 7.2.362

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -56,9 +56,9 @@
 										@preference.Preference
 									</div>
 									<div class="feedback-error"></div>
-									<div class="possible-start-times"></div>
-									<div class="possible-end-times"></div>
-									<div class="possible-contract-times"></div>
+									<div class="possible-start-times icon leftarrow"></div>
+									<div class="possible-end-times icon rightarrow"></div>
+									<div class="possible-contract-times icon doublearrow-blue"></div>
 								}
 								@if (personAssignment != null)
 								{
