--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -55,10 +55,10 @@
 									<div class="preference">
 										@preference.Preference
 									</div>
-									<div class="feedback-error"></div>
-									<div class="possible-start-times icon leftarrow"></div>
-									<div class="possible-end-times icon rightarrow"></div>
-									<div class="possible-contract-times icon doublearrow-blue"></div>
+									<div class="feedback-error truncate"></div>
+									<div class="possible-start-times icon leftarrow truncate"></div>
+									<div class="possible-end-times icon rightarrow truncate"></div>
+									<div class="possible-contract-times icon doublearrow-blue truncate"></div>
 								}
 								@if (personAssignment != null)
 								{
