--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -20,3 +20,29 @@
 	height: 20px;
 	width: 20px;
 }
+
+.feedback-error {
+	font-size: 12px;
+	height: 13px;
+	padding-bottom: 2px;
+}
+
+.possible-start-times {
+	font-size: 12px;
+	height: 13px;
+	padding-bottom: 1px;
+	font-variant: small-caps;
+}
+
+.possible-end-times {
+	font-size: 12px;
+	height: 13px;
+	padding-bottom: 1px;
+	font-variant: small-caps;
+}
+
+.possible-contract-times {
+	font-size: 12px;
+	height: 13px;
+	font-variant: small-caps;
+}
