--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -95,7 +95,7 @@
 		<select id="Absence-type" class="floatleft absence-input combobox">
 			@foreach (var absenceType in Model.AbsenceTypes)
 			{
-				<option value="@Html.AttributeEncode(absenceType)">@absenceType.Name</option>
+				<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
 			}
 		</select>
 		<input type="checkbox" id="Absence-type-check"/>@Resources.IsFullDayAbsence<br />
