--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -98,7 +98,7 @@
 				<option value="@Html.AttributeEncode(absenceType.Id)">@absenceType.Name</option>
 			}
 		</select>
-		<input type="checkbox" id="Absence-type-check"/>@Resources.IsFullDayAbsence<br />
+		
 	</div>
 	<div class="edit-module-element floatleft">
 		<input id="Schedule-addRequest-fromDate-input" class="date-input" type="text" value="@DateTime.Today.ToShortDateString()" />
@@ -124,7 +124,12 @@
 			}
 		</select>
 	</div>
-	<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.NewRequest)"/>
+	<div class="edit-module-element clearleftfloat floatleft">
+		<input type="checkbox" id="Absence-type-check"/> Full Day<br />
+	</div>
+	<div class="edit-module-element clearleftfloat">
+		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.NewRequest)"/>
+	</div>
 	<div id="Schedule-addRequest-error" class="error clearleftfloat"></div>
 </div>
 
