fix absence type selection on IE, fix tests, fxcop

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -125,7 +125,7 @@
 		</select>
 	</div>
 	<div class="edit-module-element clearleftfloat floatleft">
-		<input type="checkbox" id="Absence-type-check"/> Full Day<br />
+		<input type="checkbox" id="Fullday-check"/> Full Day<br />
 	</div>
 	<div class="edit-module-element clearleftfloat">
 		<input id="Schedule-addRequest-ok-button" type="button" class="button mb5 floatright" value="@Html.AttributeEncode(Resources.NewRequest)"/>
