--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -91,7 +91,7 @@
 		<textarea id="Schedule-addRequest-message-input" />
 	</div>
 	<div id="Absence-type-element" class="edit-module-element floatleft displaynone">
-		<div class="floatleft absence-input">@Resources.AbsenceType</div>
+		<div class="floatleft absence-input-label">@Resources.AbsenceType</div>
 		<select id="Absence-type" class="floatleft absence-input combobox">
 			@foreach (var absenceType in Model.AbsenceTypes)
 			{
